Joiners.containAny() API