@@ -6,6 +6,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -49,39 +50,45 @@ class JoinerTypeTest {
 
     @Test
     void contain() {
-        Collection<Integer> collection = Arrays.asList(1, 3);
-        assertThat(CONTAIN.matches(collection, 1)).isTrue();
-        assertThat(CONTAIN.matches(collection, 2)).isFalse();
+        assertThat(CONTAIN.matches(List.of(1, 3), 1)).isTrue();
+        assertThat(CONTAIN.matches(List.of(1, 3), 2)).isFalse();
     }
 
     @Test
     void containedIn() {
-        Collection<Integer> collection = Arrays.asList(1, 3);
-        assertThat(CONTAINED_IN.matches(1, collection)).isTrue();
-        assertThat(CONTAINED_IN.matches(2, collection)).isFalse();
+        assertThat(CONTAINED_IN.matches(1, List.of(1, 3))).isTrue();
+        assertThat(CONTAINED_IN.matches(2, List.of(1, 3))).isFalse();
     }
 
     @Test
-    void intersect() {
-        Collection<Integer> left = Arrays.asList(1, 2, 3);
-        Collection<Integer> right = Arrays.asList(3, 4, 5);
-        assertThat(INTERSECT.matches(left, right)).isTrue();
-        assertThat(INTERSECT.matches(right, left)).isTrue();
-        assertThat(INTERSECT.matches(left, Collections.emptySet())).isFalse();
+    void containAny() {
+        assertThat(CONTAIN_ANY.matches(List.of(1, 2, 3), List.of(2))).isTrue();
+        assertThat(CONTAIN_ANY.matches(List.of(1, 2, 3), List.of(6))).isFalse();
+        assertThat(CONTAIN_ANY.matches(List.of(1, 2, 3), List.of(3, 4, 5))).isTrue();
+        assertThat(CONTAIN_ANY.matches(List.of(3, 4, 5), List.of(1, 2, 3))).isTrue();
+        assertThat(CONTAIN_ANY.matches(List.of(1, 2, 3), List.of(4, 5, 6))).isFalse();
+        assertThat(CONTAIN_ANY.matches(List.of(1, 2, 3), List.of())).isFalse();
+        assertThat(CONTAIN_ANY.matches(List.of(), List.of(1))).isFalse();
+        assertThat(CONTAIN_ANY.matches(List.of(), List.of())).isTrue();
+    }
+    @Test
+    void containAll() {
+        assertThat(CONTAIN_ALL.matches(List.of(1, 2, 3), List.of(1, 2, 3))).isTrue();
+        assertThat(CONTAIN_ALL.matches(List.of(1, 3, 4), List.of(1, 2, 3))).isFalse();
+        assertThat(CONTAIN_ALL.matches(List.of(1, 2, 3), List.of(1, 2))).isTrue();
+        assertThat(CONTAIN_ALL.matches(List.of(1, 2), List.of(1, 2, 3))).isFalse();
+        assertThat(CONTAIN_ALL.matches(List.of(1, 2, 3), List.of())).isTrue();
+        assertThat(CONTAIN_ALL.matches(List.of(), List.of(1))).isFalse();
+        assertThat(CONTAIN_ALL.matches(List.of(), List.of())).isTrue();
     }
 
     @Test
-    void disjoint() {
-        Collection<Integer> first = Arrays.asList(1, 2, 3);
-        Collection<Integer> second = Arrays.asList(3, 4, 5);
-        assertThat(DISJOINT.matches(first, second)).isFalse();
-        assertThat(DISJOINT.matches(second, first)).isFalse();
-        Collection<Integer> third = Arrays.asList(4, 5);
-        assertThat(DISJOINT.matches(first, third)).isTrue();
-        assertThat(DISJOINT.matches(third, first)).isTrue();
-        // empty sets are disjoint
-        assertThat(DISJOINT.matches(Collections.emptyList(), Collections.emptySet())).isTrue();
-        assertThat(DISJOINT.matches(first, Collections.emptySet())).isTrue();
+    void containNone() {
+        assertThat(CONTAIN_NONE.matches(List.of(1, 2, 3), List.of(3, 4, 5))).isFalse();
+        assertThat(CONTAIN_NONE.matches(List.of(1, 2, 3), List.of(4, 5))).isTrue();
+        assertThat(CONTAIN_NONE.matches(List.of(1, 2, 3), List.of())).isTrue();
+        assertThat(CONTAIN_NONE.matches(List.of(), List.of())).isTrue();
+        assertThat(CONTAIN_NONE.matches(List.of(), List.of(1))).isTrue();
     }
 
 }
